tests/ui/traits/method-resolution-multiple-traits.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/method-resolution-multiple-traits.rs:18:14
   |
LL |         self.to_int() + other.to_int()
   |              ^^^^^^ multiple `to_int` found
   |
note: candidate #1 is defined in an impl of the trait `Add` for the type `isize`
  --> $DIR/method-resolution-multiple-traits.rs:16:5
   |
LL |     fn to_int(&self) -> isize { *self }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl of the trait `ToPrimitive` for the type `isize`
  --> $DIR/method-resolution-multiple-traits.rs:4:5
   |
LL |     fn to_int(&self) -> isize { 0 }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the method for candidate #1
   |
LL -         self.to_int() + other.to_int()
LL +         Add::to_int(&self) + other.to_int()
   |
help: disambiguate the method for candidate #2
   |
LL -         self.to_int() + other.to_int()
LL +         ToPrimitive::to_int(&self) + other.to_int()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0034`.
